fixing bug when screen width overflow

--- a/app/assets/stylesheets/twendy.css
+++ b/app/assets/stylesheets/twendy.css
@@ -2,6 +2,9 @@
 /*   Application CSS roles   */
 /* ========================= */
 
+html {
+	overflow: hidden !important;
+}
 #page {
 	position: relative;
 	top: 0px;
